syntax = "proto3";

package users;

service UsersService {
  rpc FindAll(FindAllUsersRequest) returns (FindAllUsersResponse);
  rpc FindOne(FindOneUserRequest) returns (User);
  rpc FindByEmail(FindByEmailRequest) returns (User);
  rpc Create(CreateUserRequest) returns (User);
  rpc Update(UpdateUserRequest) returns (User);
  rpc UpdateProfile(UpdateProfileRequest) returns (User);
  rpc Delete(DeleteUserRequest) returns (DeleteUserResponse);
  rpc BlockUser(BlockUserRequest) returns (User);
  rpc UnblockUser(UnblockUserRequest) returns (User);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
}

message User {
  int32 id = 1;
  string uuid = 2;
  string username = 3;
  string email = 4;
  string firstName = 5;
  string lastName = 6;
  string phone = 7;
  string bio = 8;
  string avatarUrl = 9;
  string resumeUrl = 10;
  int32 roleId = 11;
  int32 statusId = 12;
  string preferredLanguage = 13;
  string timezone = 14;
  string emailVerifiedAt = 15;
  string lastLoginAt = 16;
  string lastSeenAt = 17;
  bool isOnline = 18;
  bool isActive = 19;
  string createdAt = 20;
  string updatedAt = 21;
}

message FindAllUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message FindAllUsersResponse {
  repeated User users = 1;
  int32 total = 2;
}

message FindOneUserRequest {
  int32 id = 1;
}

message FindByEmailRequest {
  string email = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string timezone = 6;
}

message UpdateUserRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string phone = 4;
  string bio = 5;
  string avatarUrl = 6;
  string timezone = 7;
  string preferredLanguage = 8;
  string password = 9;
}

message UpdateProfileRequest {
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  string bio = 4;
  string avatarUrl = 5;
  string phone = 6;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  string message = 1;
}

message BlockUserRequest {
  int32 id = 1;
  string reason = 2;
}

message UnblockUserRequest {
  int32 id = 1;
}

message ChangePasswordRequest {
  int32 userId = 1;
  string currentPassword = 2;
  string newPassword = 3;
}

message ChangePasswordResponse {
  string message = 1;
}

message SearchUsersRequest {
  string query = 1;
  string roleFilter = 2;
  int32 page = 3;
  int32 limit = 4;
}

message SearchUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 totalPages = 5;
}
